# dfttools

./: .gitignore  DFT_trails.ipynb  README.md  Startup.py  Trim_BG.py  Trim_BG_v1.py  aerodyne_pinmap.json  cache.py  dfttools_implementation.md  lib_creation.py  main.py  pyproject.toml  requirements.txt  setup.cfg  setup.py  snake_gmae.py  test.py  test_implementation.py  toy_interpreter.py  toy_upgrade.py  trails.ipynb
Procedures/: ADC_Meas_Temp.py  Restore_OTP_Default.py  SAR_Startup.py  Startup.py  Startup_5.2V.py  Startup_BUCK_force.py  Startup_CP_force.py  Startup_REF.py
doc/: Comparing_existing_ATE_and_New.md  Notes.md  force_instruction.md  force_sweep.md  i2c.md  measure_instruction.md  signals.md  time.md  trigger_instruction.md
doc/language/: ReadStore Operations.md  dft_preliminary_syntax.md  force operation.md  forcesweep operations.md  informal-definition.md  instruction set definations.md  meas operations.md  varaible maintainance in instructions.md
gui/: app.py  tailwind.config.js
src/dfttools/: Trigger_test.py  __init__.py  dummy.json  enum.py  glob.py  librarylisting.py  main.py  ops.py  suggestions.json  testing.ipynb  toy.py  trig_callback_test.py
src/dfttools/callbacks/: force_callbacks.py  force_sweep_callbacks.py  i2c_callback.py  measure_callbacks.py  signal_callbacks.py  time_callbacks.py  trig_callbacks.py  trig_custom_callbacks.py
src/dfttools/exceptions/: exceptions.py
src/dfttools/glob/: __init__.py  cache.py  glob.py
src/dfttools/hardware/: force.py  force_sweep.py  i2c.py  measure.py  signal.py  time.py  trig.py
src/dfttools/instructions/: I2C.py  __init__.py  force.py  force_sweep.py  forcesweep.py  meas.py  read_store.py  signal.py  time.py  trigger.py  wait.py  write_bitfields.py
src/dfttools/ivm6201/: pinmap.yaml
src/dfttools/ivm6201/CP/: NH_RON.py
src/dfttools/measenv/: __init__.py  measure.py
src/dfttools/ops/: __init__.py  forceops.py  forcesweepops.py  measops.py  ops.py  readstoreops.py  triggerops.py
src/dfttools/units/: __init__.py  current.py  frequency.py  resistance.py  time.py  trig.py  volt.py
testgui/saved_tests/: cp.py
testgui/static/: style.css
testgui/templates/: index.html
tests/: i2c_test.py  measure_testing.py
