[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[metadata]
name = dfttools
version = 0.1.0
author = Your Name
author_email = your.email@example.com
description = A Python package for hardware operations and testing.
long_description = file: README.md
long_description_content_type = text/markdown
license_files = LICENSE

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src

[options.extras_require]
testing =
    pytest >=6.0

[project]
name = "dfttools"
version = "0.1.0"
description = "A Python package for hardware operations and testing."
authors = [
    {name = "Davide Ciminaghi",email = "davicimi@inventvm.com"}
    {name = "Harish Kumar Shivaramappa", email = "harishkumarsedu@gmail.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    #"ivm-audio-config @ file:///home/develop/inventvm/ivm-audio-config",
    "ivm-audio-config @ git+https://inventvmsemipv:WTF@github.com/inventvmsemipv/ivm-audio-config.git",
    "anytree (>=2.12.1,<3.0.0)"
]
license = {text = "MIT"}
dependencies = []

[tool.setuptools]
packages = find:
