[project]
name = "dfttools"
version = "0.2.0"
description = ""
authors = [
    {name = "Davide Ciminaghi",email = "davicimi@inventvm.com"}
]
readme = "README.md"
requires-python = "^3.11"
dependencies = [
    #"ivm-audio-config @ file:///home/develop/inventvm/ivm-audio-config",
    #"ivm-audio-config @ git+https://inventvmsemipv:WTF@github.com/inventvmsemipv/ivm-audio-config.git",
    "anytree (>=2.12.1,<3.0.0)"
]

[tool.poetry]
packages = [{include = "dfttools", from = "src"}]

[project.scripts]
toy_parser = 'dfttools.toy:run'


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"